correction valeur du z-index

--- a/client/src/components/imageComparator/_imageComparator.scss
+++ b/client/src/components/imageComparator/_imageComparator.scss
@@ -59,7 +59,7 @@
       position: absolute;
       top:0;
       left: 50%;
-      z-index: 2;
+      z-index: 1;
       width: 2px;
       height: 100%;
       background-color: rgba(255, 255, 255, 0.7);
