--- a/client/src/scss/index.css
+++ b/client/src/scss/index.css
@@ -3692,7 +3692,7 @@ pre, code {
   position: absolute;
   top: 0;
   left: 50%;
-  z-index: 2;
+  z-index: 1;
   width: 2px;
   height: 100%;
   background-color: rgba(255, 255, 255, 0.7);
@@ -4245,6 +4245,7 @@ pre, code {
   align-items: center;
   gap: 1rem;
   position: fixed;
+  z-index: 3;
   top: 0;
   left: 0;
   width: 100%;
